Upgrade to most recent primevue so we can use stepper/stepperpanel and fix 3 resulting bugs: header buttons not working, badge numbers not centered, and search icon not displaying correctly.

--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -23,3 +23,7 @@ body .p-inputtext {
 body .p-button {
   min-width: 10px;
 }
+
+.p-badge {
+  text-align: center;
+}
